inserted media queries and SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mirna Fakin</title>
+    <meta
+      name="description"
+      content="Mirna Fakin is a front-end developer based in Europe, Croatia, check out her project and contact her for job inquiries."
+    />
+    <title>Front-end developer - Mirna Fakin</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -54,15 +58,26 @@
     <h1 class="text-center">Mirna Fakin</h1>
     <h3 class="text-center">Front-end developer, based in Zagreb</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="primary-link"
+        title="Contact Mirna Fakin"
+        >Contact me</a
+      >
+      <a href="about.html" class="secondary-link" title="About Mirna Fakin"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+        <div class="col-sm-6">
+          <img
+            src="images/yoga.png"
+            alt="Yoga project"
+            class="img-fluid rounded d-none d-sm-block"
+          />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -71,12 +86,14 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" title="Yoga project" class="primary-link project-link"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -85,18 +102,31 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a
+              href="#"
+              title="Weather project"
+              class="primary-link project-link"
+              >Launch Weather App</a
+            >
           </div>
         </div>
-        <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+        <div class="col-sm-6">
+          <img
+            src="images/weather.png"
+            alt="Weather project"
+            class="img-fluid rounded d-none d-sm-block"
+          />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+        <div class="col-sm-6">
+          <img
+            src="images/yogurt.png"
+            alt="Yogurt project"
+            class="img-fluid rounded d-none d-sm-block"
+          />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -105,7 +135,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" title="Yogurt project" class="primary-link project-link"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
