cleaned the code
and made website more SEO friendly after watching the solution video

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Mirna Fakin is a front-end developer based in Europe, Croatia, check out her project and contact her for job inquiries."
+      content="Mirna Fakin is a front-end developer based in Europe, Croatia, check out her projects."
     />
     <title>Front-end developer - Mirna Fakin</title>
     <link
@@ -20,12 +20,12 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Mirna Fakin</a>
+        <a class="navbar-brand" href="/">Mirna Fakin</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,15 +40,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -59,12 +59,12 @@
     <h3 class="text-center">Front-end developer, based in Zagreb</h3>
     <div class="navigation-links mb-5">
       <a
-        href="about.html#contact"
+        href="/about.html#contact"
         class="primary-link"
         title="Contact Mirna Fakin"
         >Contact me</a
       >
-      <a href="about.html" class="secondary-link" title="About Mirna Fakin"
+      <a href="/about.html" class="secondary-link" title="About Mirna Fakin"
         >About me</a
       >
     </div>
