--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Mirna Fakin is a front-end developer based in Europe, Croatia, check out her project and contact her for job inquiries."
+      content="Mirna Fakin is a front-end developer based in Europe, Croatia, contact her for job inquiries."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -19,13 +19,13 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
-    <title>About Mirna Fakin</title>
+    <link rel="stylesheet" href="/style.css" />
+    <title>About me - Mirna Fakin</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Mirna Fakin</a>
+        <a class="navbar-brand" href="/">Mirna Fakin</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,13 +40,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link active" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -66,20 +66,23 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             class="img-fluid p-2 mb-4 shadow rounded"
+            alt="Yoga project"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             class="img-fluid p-2 mb-4 shadow rounded"
+            alt="Weather project"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             class="img-fluid p-2 mb-4 shadow rounded"
+            alt="Yogurt project"
           />
         </div>
       </div>
